@@ -10,8 +10,8 @@
 #include <stdint.h>
 #include <string.h>
 
-#if !defined(__SDCC_hc08) && !defined(__SDCC_s08) && !defined(__SDCC_mos6502) && !defined(__SDCC_mos65c02) // Bug #3731.
-#if !defined(__SDCC_ds390) // ds390 can't return struct yet.
+#if !defined(__SDCC_mos6502) && !defined(__SDCC_mos65c02) // mos6052/mos65c02 can't return struct this large yet.
+#if !defined(__SDCC_hc08) && !defined(__SDCC_s08) && !defined(__SDCC_ds390) // hc08/s08/ds390 can't return struct yet.
 #if !defined(__SDCC_mcs51) && !defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) && !( (defined (__SDCC_mos6502) || defined(__SDCC_mos65c02 )) && defined(__SDCC_STACK_AUTO) ) // Lack of memory
 
 #define SHA3_256_MD_LEN 32      // 256-bit digest length in bytes.
@@ -211,6 +211,7 @@ void
 testSha (void)
 {
 #if __STDC_ENDIAN_NATIVE__ // The implementation assumes little-endian
+#if !defined(__SDCC_mos6502) && !defined(__SDCC_mos65c02) // mos6502/mos65c02 can't return struct this large yet
 #if !defined(__SDCC_ds390) // ds390 can't return struct yet.
 #if !__SDCC_mcs51 && !defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) // Lack of memory
     int i;
@@ -220,6 +221,7 @@ testSha (void)
       sha3_256_digest(pairs[i].in, strlen(pairs[i].in), out);
       ASSERT(!memcmp(out, pairs[i].out, sizeof(out)));
     }
+#endif
 #endif
 #endif
 #endif
